--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,52 @@
-node_modules
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Source files (we only want to deploy the built dist folder)
+src/
+scripts/
+package.json
+package-lock.json
+webpack.config.js
+tsconfig.json
+babel.config.json
+
+# Development files
+.DS_Store
+*.log
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
+
+# Keep the dist folder for deployment
+!dist/
+
+# Keep manifest.xml in root for development
+!manifest.xml
+
+# Keep version.json for tracking
+!version.json
+
+# Keep README and other docs
+!README.md
+!*.md
+
+# Keep assets folder
+!assets/
+
+# Ignore the SqExcelWeb subfolder (it's a separate project)
+SqExcelWeb/
