--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode production",
+    "bump-version": "node scripts/bump-version.js",
+    "build": "npm run bump-version && webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
@@ -35,11 +36,13 @@
     "acorn": "^8.5.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "custom-functions-metadata-plugin": "^2.1.2",
     "eslint-plugin-office-addins": "^4.0.3",
     "file-loader": "^6.2.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.4",
     "office-addin-cli": "^2.0.3",
     "office-addin-debugging": "^6.0.3",
     "office-addin-dev-certs": "^2.0.3",
@@ -50,6 +53,7 @@
     "process": "^0.11.10",
     "request": "^2.88.2",
     "source-map-loader": "^5.0.0",
+    "style-loader": "^4.0.0",
     "typescript": "^5.4.2",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
