Fix GitHub Actions build: Include scripts and build files
- Updated .gitignore to allow scripts/ folder for build process
- Added package.json, package-lock.json, webpack.config.js, tsconfig.json, babel.config.json
- Added scripts/ folder with bump-version.js
- This fixes the 'Cannot find module bump-version.js' error in GitHub Actions

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,14 @@ yarn-error.log*
 
 # Source files (we only want to deploy the built dist folder)
 src/
-scripts/
 package.json
 package-lock.json
 webpack.config.js
 tsconfig.json
 babel.config.json
+
+# Keep scripts folder for build process
+!scripts/
 
 # Development files
 .DS_Store
