🔧 Streamlined project structure and completed documentation
✨ Simplified version.json to only contain version number
📝 Completed SUPPORT.md with comprehensive help documentation
🗂️ Updated package.json scripts to use dist/manifest.xml
⚡ Enhanced bump-version.js for simplified version management
🏗️ Maintained manifest.xml as build template (webpack processes it)

- Eliminated unused metadata from version.json (description, changes, buildDate)
- Added detailed troubleshooting guide and issue reporting process
- Fixed version discrepancy issues by streamlining version management
- Version bumped to 1.0.82

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "prettier": "office-addin-lint prettier",
     "signin": "office-addin-dev-settings m365-account login",
     "signout": "office-addin-dev-settings m365-account logout",
-    "start": "office-addin-debugging start manifest.xml",
-    "stop": "office-addin-debugging stop manifest.xml",
-    "validate": "office-addin-manifest validate manifest.xml",
+    "start": "office-addin-debugging start dist/manifest.xml",
+    "stop": "office-addin-debugging stop dist/manifest.xml",
+    "validate": "office-addin-manifest validate dist/manifest.xml",
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
