🚀 Switch to cloud-based build and deploy workflow
✅ Removed conflicting deploy-dist-only.yml workflow
🌩️ Updated .gitignore to ignore dist/ folder (built in GitHub Actions)
🗑️ Removed dist/ folder from git tracking
⚡ Now using pure cloud build: push source code → GitHub Actions builds → deploys

Benefits:
- No more local builds needed
- No more dist/ folder conflicts
- Cleaner repository with only source code
- Faster development workflow

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,8 @@ yarn-error.log*
 *.tmp
 *.temp
 
-# Keep the dist folder for deployment
-!dist/
+# Ignore dist folder - GitHub Actions will build it in the cloud
+dist/
 
 # Keep manifest.xml in root for development
 !manifest.xml
